# Procedural

./: CMakeLists.txt  complex_numbers.cpp  complex_numbers.h  container.cpp  container.h  fractional_numbers.cpp  fractional_numbers.h  main.cpp  numbers.cpp  numbers.h  polar_numbers.cpp  polar_numbers.h  standart.docx  test.cpp
